nginx (1.4.6-2) UNRELEASED; urgency=medium

  [ Christos Trochalakis ]
  * debian/modules/nginx-http-push:
    + Update to 0.711 (Closes: #732251)
  * debian/modules/headers-more-nginx-module:
    + Update to 0.25, containing several bugfixes.
  * debian/modules/nginx-echo:
    + Update to 0.51, containing several bugfixes.

 -- Christos Trochalakis <yatiohi@ideopolis.gr>  Thu, 13 Mar 2014 12:58:40 +0200

nginx (1.4.6-1) unstable; urgency=medium

  [ Christos Trochalakis ]
  * New upstream release.
  * debian/rules:
    + Avoid double declaration of hardening flags.
    + Expand buildflags so the build log is easier to follow.
    + Switch to --with--cc-opt, --with-ld-opt configure flags.
      Nginx is now compiled with --Werror, making all warnings
      into errors.
    + Split common configure options.
    + Enable realip module for nginx-light.
    + Enable debug module for nginx-light and nginx-extras.
  * debian/patches/perl-use-dpkg-buildflags.patch:
    + Rewrite patch to just just override LDDLFLAGS and not
      CCFLAGS since this is handled by --with-cc-opt.
  * debian/watch, debian/upstream/signing-key.asc:
    + Fix upstream signature verification.

 -- Christos Trochalakis <yatiohi@ideopolis.gr>  Tue, 04 Mar 2014 18:06:55 +0200

nginx (1.4.5-1) unstable; urgency=medium

  [ Christos Trochalakis ]
  * New upstream release.
  * debian/modules/nginx-lua:
    + Update nginx-lua to v0.9.4
  * debian/nginx-naxsi-ui.preinst:
    + Fix exit status issue (Closes: #735152)
  * debian/control:
    + Fix arch:all to arch:any dependencies
    + Make nginx depend on specific flavor version
  * debian/nginx-*.postinst:
    + Make nginx start by default (Closes: #735551)
  * debian/nginx-*.prerm:
    + No need to check for invoke-rc.d,
      correctly set the exit code on error
  * debian/nginx-common.nginx.init:
    + Rewrite some parts of the initscript
    + Introduce rotate command
    + Introduce upgrade command
