@@ -50,7 +50,7 @@ README for Modules versions
 
  nginx-dav-ext-module
   Homepage: https://github.com/arut/nginx-dav-ext-module
-  Version: v0.0.2-2-g54cebc1.tar.gz
+  Version: v0.0.3
 
  ngx-fancyindex
   Homepage: https://github.com/aperezdc/ngx-fancyindex
